[package]
name = "zerocopy-buf"
version = "0.2.0"
edition = "2021"
rust-version = "1.56.0"
license = "Apache-2.0"
repository = "https://github.com/conradludgate/zerocopy-buf/"
description = "Integration between bytes and zerocopy"
keywords = ["serialization", "network", "no_std", "zero-copy"]
categories = ["embedded", "encoding", "no-std", "parsing", "rust-patterns"]
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]


[dependencies]
bytes = { version = "1.0", default-features = false }
zerocopy = { version = "0.8.9", default-features = false }

[dev-dependencies]
bytes = { version = "1.0", features = ["std"] }
zerocopy = { version = "0.8.9", features = ["derive"] }
